[package]
name = "server"
version = "0.1.0"
authors = ["christian <christian@chfi.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "0.11"
futures-util = "0.3"
crdts = "4.2.0"
serde = "1.0"
serde_json = "1.0"
crdts-sandbox-lib = { path = "../lib" }
